--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "lucide-react": "^0.400.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
